2015-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (StringToAttribute): Make sure that string is not
	accidentally shortened by one character if it occupies the full
	field size.
	(ReadDPXImage): Validate that the bits per sample claimed by the
	file header is a supported depth before using it further in the
	code.  This might resolve Coverity CID 10071 "Bad shift
	operation".
	(ReadDPXImage): Check for EOF while reading forward to element
	data.  Might solve Coverity CID 10305.

	* coders/dib.c (ReadDIBImage): Resolve Coverity CID 10228 "Integer
	overflowed argument".
	(ReadDIBImage): Hopefully resolve Coverity CID 10268 "Various",
	which is primarily about placing too much trust in the claimed
	number of colors.

	* coders/pnm.c (WritePNMImage): Fix overwrite of status by
	progress monitor.  Remaining issues may lurk within.  May resolve
	Coverity CID 10288.

	* coders/pdb.c: Resolve Coverity CID 11173 "Buffer not null
	terminated".

2015-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (GetMagickInfoArray): Resolve Coverity CID 10212
	"Missing unlock".

	* magick/colormap.c (ReplaceImageColormap): Allocate new image
	colormap up front in order to avoid the possibility that we are
	left with an image with no colormap due to memory allocation
	failure. If there is a memory allocation failure, then the
	original colormap is preserved.  Resolves Coverity CID 10194
	"Dereference after null check".

	* magick/utility.c (MagickStripSpacesFromString): New private
	utility function to strip spaces from a string.

	* magick/color_lookup.c (GetColorInfoArray): Resolves Coverity CID
	10231 "Missing unlock"
	(ReadColorConfigureFile): Resolves Coverity CID 10261 "Use of
	untrusted scalar value"
	(GetColorInfo): Resolves Coverity CID 10077 "Overlapping buffer in
	memory copy".

2015-01-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Use png_error() instead of